# ib-practica12-oop-gtests-exercism-Guillermo-A

complex/: CMakeLists.txt
complex/practica/: Suma_cambio.cc  com
complex/src/: complex.cc  complex.h  complexs.cc
complex/test/: tes_add.cc  test_sub.cc
date/: CMakeLists.txt
date/src/: fecha.cc  fecha.h  fecha_entrada.txt  fechas.cc
date/test/: tes_bisiesto.cc
